# meu-gerenciador-tarefas-python

./: .gitignore  README.md  app.py  pyproject.toml
