[project]
name = "meu-gerenciador-tarefas"
version = "0.1.0"
description = ""
authors = [
    {name = "liliane",email = "li.lima662@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
